fix: style change to always show scroll bars to prevent flicker.

--- a/apps/mux/src/index.css
+++ b/apps/mux/src/index.css
@@ -9,6 +9,10 @@ div {
   vertical-align: baseline;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 .progress {
   margin-bottom: 16px;
   height: 12px;
